--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&family=Roboto+Mono:wght@200;300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap"
+      rel="stylesheet"
+    />
     <title>Madeleine Svensson portfolio</title>
   </head>
 
